Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8773

kmtest usermode-part test RtlException failing due to missing stack guard page

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.12
    • NTCore

    Description

      rostests\kmtest (kmtest_.exe), test case RtlException.

      This test is running the code in RtlException.c in user-mode, where it gets the conditionally compiled path to test for stack guard page.

      As ROS currently lacks stack guard pages, this code throws a SEGV and the test fails.

      Code currently disabled by macro CORE_6640_IS_FIXED.

      Attachments

        Issue Links

          Activity

            People

              alex_ionescu Alex Ionescu
              tamlin Mike Nordell
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: