[KMTESTS:RTL] - Add some simple tests for RtlRaiseStatus to the RtlException test - Add missing volatile in (disabled) stack overflow test that caused an infinite loop on GCC builds CORE-8773

svn path=/trunk/; revision=66351